Top nav no longer fixed to top (was causing issues on mobile).   Builder survey name now in navbar to save space.

--- a/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/question-details/question-details.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/question-details/question-details.component.scss
@@ -7,7 +7,7 @@
 
 	.optionKey {
 		float: left !important;
-		width: 100px !important;
+		width: 80px !important;
 		flex: unset;
 		height:unset;
 	}
